# semantic-graph

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  REQUIREMENTS.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: DEVELOPER_GUIDE.md
migrations/: README  env.py
migrations/versions/: 5ba2446fa7ea_initial_schema.py
src/semantic_graph/: __init__.py
src/semantic_graph/api/: main.py
src/semantic_graph/api/middleware/: __init__.py  error_handler.py  logging.py
src/semantic_graph/api/routes/: graph.py  health.py  llm.py  projects.py
src/semantic_graph/api/schemas/: __init__.py  common.py  projects.py
src/semantic_graph/cli/: main.py
src/semantic_graph/cli/commands/: __init__.py  config.py  projects.py
src/semantic_graph/core/: config.py  graph_manager.py  project_manager.py
src/semantic_graph/extractors/: base.py  registry.py  scanner.py
src/semantic_graph/extractors/builtins/: __init__.py  code.py  documents.py  text.py
src/semantic_graph/graph_engine/: __init__.py  backends.py  graph_builder.py  queries.py  sync.py
src/semantic_graph/llm/: manager.py  provider_base.py
src/semantic_graph/llm/providers/: anthropic.py  ollama.py  openai.py
src/semantic_graph/storage/: database.py  models.py
src/semantic_graph/storage/repositories/: __init__.py  base.py  edge.py  file_manifest.py  node.py  processing_job.py  project.py
src/semantic_graph/utils/: errors.py  helpers.py  logging.py  security.py
tests/unit/: test_api_smoke.py  test_cli_commands.py  test_cli_smoke.py  test_database.py  test_graph_engine.py  test_models.py  test_project_api.py  test_repositories.py  test_scanner.py  test_security.py
