[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-graph"
version = "0.1.0"
description = "Create, manage, and query semantic graphs from user-defined data folders."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "openai>=1.0",
    "anthropic>=0.25",
    "python-multipart>=0.0.9",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pip-tools>=7",
    "types-networkx>=3.0",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.scripts]
semantic-graph = "semantic_graph.cli.main:app"
semantic-graph-server = "semantic_graph.api.main:start"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_graph"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

# Third-party stubs that may be incomplete or unavailable
[[tool.mypy.overrides]]
module = [
    "uvicorn",
    "uvicorn.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "graph_tool",
    "graph_tool.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["semantic_graph"]
branch = true

[tool.coverage.report]
show_missing = true
